<resources>
    <string name="app_name">SmartCity</string>

    <!-- Errors -->
    <string name="http_no_connection">No data : Check your internet connection</string>
    <string name="technical_error">An unknown error happened : Try again</string>
    <string name="request_error">An error occurred during your request</string>

    <!-- Nav -->
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="default_nav_header_title">Not connected</string>
    <string name="welcome_nav_header_title">Welcome</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Nav Item -->
    <string name="menu_home">Home</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_activity_filters">Activity Category</string>
    <string name="menu_place">Place</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Login</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Spinner hint -->
    <string name="city_spinner_hint">City</string>

    <!-- InformationDialog -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="not_connected_error">Not logged</string>
    <string name="not_connected_message">You have to be logged to access this functionality</string>
    <string name="wrong_email_password">Username and/or password incorrect</string>
    <string name="error_servor">An error has occurred by our side</string>

    <!-- Text in layout -->
    <string name="search">Search</string>
    <string name="edit_filters">Edit Filters</string>
    <string name="confirm">Confirm</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="languages">Languages</string>
    <string name="night_mode">Night Mode</string>
    <string name="elements_not_found">Elements not found</string>

</resources>