<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="be.happli.pos.smartcity.UI.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_activity"
            app:destination="@id/nav_activity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/nav_activity"
        android:name="be.happli.pos.smartcity.UI.Activity.ActivityFragment"
        android:label="@string/menu_activity"
        tools:layout="@layout/fragment_activity" >
        <action
            android:id="@+id/action_nav_activity_to_nav_activity_filters"
            app:destination="@id/nav_activity_filters"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_nav_activity_to_nav_place"
            app:destination="@id/nav_place"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
        <action
            android:id="@+id/action_nav_activity_to_nav_home"
            app:destination="@id/nav_home"
            app:enterAnim="@anim/slide_in_left"
            app:exitAnim="@anim/slide_out_right"
            app:popEnterAnim="@anim/slide_in_right"
            app:popExitAnim="@anim/slide_out_left"/>
    </fragment>

    <fragment
        android:id="@+id/nav_activity_filters"
        android:name="be.happli.pos.smartcity.UI.ActivityFilters.ActivityFiltersFragment"
        android:label="@string/menu_activity_filters"
        tools:layout="@layout/fragment_activity_filters" >
    </fragment>

    <fragment
        android:id="@+id/nav_place"
        android:name="be.happli.pos.smartcity.UI.Place.PlaceFragment"
        android:label="@string/menu_place"
        tools:layout="@layout/fragment_place" >
        <action
            android:id="@+id/action_nav_place_to_nav_login"
            app:destination="@id/nav_login"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/nav_bookmarks"
        android:name="be.happli.pos.smartcity.UI.Bookmarks.BookmarksFragment"
        android:label="@string/menu_bookmarks"
        tools:layout="@layout/fragment_bookmarks" >
        <action
            android:id="@+id/action_nav_bookmarks_to_nav_login"
            app:destination="@id/nav_login"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"/>
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="be.happli.pos.smartcity.UI.Settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_login"
        android:name="be.happli.pos.smartcity.UI.Login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_nav_login_to_nav_bookmarks"
            app:destination="@id/nav_bookmarks"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            />
    </fragment>

</navigation>